Bug Fix: Fixed issue where some days may be cut off due to insufficient space on grid (e.g. March)

--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,7 @@ li {
 .daysGrid {
   display: grid;
   grid-template-columns: repeat(7, 2fr); 
-  grid-template-rows: repeat(5, 2fr); 
+  grid-template-rows: repeat(6, 2fr); 
 
   width: 65%;
   height: 74%;
